# CASYMBA

./: .gitignore  CMakeLists.txt  README.md  calculs.c  calculs.h  dlist.c  dlist.h  main.c  makefile  map.c  map.h  rpn.c  rpn.h  simplify.c  simplify.h
src/: LICENSE  arithmetic.c  calculs.c  calculs.h  deriv.c  dlist.c  dlist.h  equadiff.c  includes.h  integral.c  integral.h  main.c  map.c  map.h  numerical.c  numerical.h  poly.c  rpn.c  rpn.h  simplify.c  simplify.h  taylor.c
